--- a/src/i18n/messages/ru.json
+++ b/src/i18n/messages/ru.json
@@ -1,15 +1,15 @@
 {
-  "start.learning": "Start learning",
-  "with.site.name": "with {siteName}",
-  "complete.your.profile.1": "Complete",
-  "complete.your.profile.2": "your profile",
-  "welcome.to.platform": "Welcome to {siteName}, {username}!",
-  "institution.login.page.sub.heading": "Choose your institution from the list below",
-  "forgot.password.confirmation.title": "Check your email",
-  "forgot.password.confirmation.support.link": "contact technical support",
+  "start.learning": "Начните учиться",
+  "with.site.name": "с {siteName}",
+  "complete.your.profile.1": "Заполните",
+  "complete.your.profile.2": "свой профиль",
+  "welcome.to.platform": "Добро пожаловать, {username}!",
+  "institution.login.page.sub.heading": "Выберите свое учебное заведение из списка ниже",
+  "forgot.password.confirmation.title": "Проверьте свою электронную почту",
+  "forgot.password.confirmation.support.link": "обратитесь в службу технической поддержки",
   "forgot.password.confirmation.info": "If you do not receive a password reset message after 1 minute, verify that you entered the correct email address, or check your spam folder.",
-  "logistration.sign.in": "Sign in",
-  "logistration.register": "Register",
+  "logistration.sign.in": "Войти",
+  "logistration.register": "Зарегистрироваться",
   "internal.server.error.message": "An error has occurred. Try refreshing the page, or check your internet connection.",
   "server.ratelimit.error.message": "An error has occurred because of too many requests. Please try again after some time.",
   "enterprisetpa.title.heading": "Would you like to sign in using your {providerName} credentials?",
