--- a/src/i18n/messages/ru.json
+++ b/src/i18n/messages/ru.json
@@ -7,23 +7,23 @@
   "institution.login.page.sub.heading": "Выберите свое учебное заведение из списка ниже",
   "forgot.password.confirmation.title": "Проверьте свою электронную почту",
   "forgot.password.confirmation.support.link": "обратитесь в службу технической поддержки",
-  "forgot.password.confirmation.info": "If you do not receive a password reset message after 1 minute, verify that you entered the correct email address, or check your spam folder.",
+  "forgot.password.confirmation.info": "Если вы не получите сообщение о сбросе пароля через несколько минут, убедитесь, что вы ввели правильный адрес электронной почты, или проверьте папку со спамом.",
   "logistration.sign.in": "Войти",
   "logistration.register": "Зарегистрироваться",
-  "internal.server.error.message": "An error has occurred. Try refreshing the page, or check your internet connection.",
-  "server.ratelimit.error.message": "An error has occurred because of too many requests. Please try again after some time.",
-  "enterprisetpa.title.heading": "Would you like to sign in using your {providerName} credentials?",
-  "enterprisetpa.sso.button.title": "Sign in using {providerName}",
-  "enterprisetpa.login.button.text": "Show me other ways to sign in or register",
-  "sso.sign.in.with": "Sign in with {providerName}",
-  "sso.create.account.using": "Create account using {providerName}",
-  "show.password": "Show password",
-  "hide.password": "Hide password",
-  "one.letter": "1 letter",
-  "one.number": "1 number",
-  "eight.characters": "8 characters",
-  "password.sr.only.helping.text": "Password must contain at least 8 characters, at least one letter, and at least one number",
-  "tpa.alert.heading": "Almost done!",
+  "internal.server.error.message": "Произошла ошибка. Попробуйте обновить страницу или проверьте свое подключение к Интернету.",
+  "server.ratelimit.error.message": "Произошла ошибка из-за слишком большого количества запросов. Пожалуйста, попробуйте еще раз через некоторое время.",
+  "enterprisetpa.title.heading": "Хотите ли вы войти в систему, используя свои учетные данные {providerName}?",
+  "enterprisetpa.sso.button.title": "Войдите в систему, используя {providerName}",
+  "enterprisetpa.login.button.text": "Другие способы входа в систему или регистрации",
+  "sso.sign.in.with": "Войдите в систему с помощью {providerName}",
+  "sso.create.account.using": "Создайте учетную запись с помощью{providerName}",
+  "show.password": "Показать пароль",
+  "hide.password": "Скрыть пароль",
+  "one.letter": "1 буква",
+  "one.number": "1 цифра",
+  "eight.characters": "8 символов",
+  "password.sr.only.helping.text": "Пароль должен содержать не менее 8 символов, по крайней мере одну букву и по крайней мере одну цифру",
+  "tpa.alert.heading": "Почти готово!",
   "login.third.party.auth.account.not.linked": "You have successfully signed into {currentProvider}, but your {currentProvider} account does not have a linked {platformName} account. To link your accounts, sign in now using your {platformName} password.",
   "register.third.party.auth.account.not.linked": "You've successfully signed into {currentProvider}! We just need a little more information before you start learning with {platformName}.",
   "error.notfound.message": "The page you're looking for is unavailable or there's an error in the URL. Please check the URL and try again.",
@@ -62,8 +62,8 @@
   "account.locked.out.message.2": "To be on the safe side, you can {resetLink} before trying again.",
   "login.incorrect.credentials.error.with.reset.link": "The username, email, or password you entered is incorrect. Please try again or {resetLink}.",
   "login.page.title": "Login | {siteName}",
-  "login.user.identity.label": "Username or email",
-  "login.password.label": "Password",
+  "login.user.identity.label": "Имя пользователя или email",
+  "login.password.label": "Пароль",
   "sign.in.button": "Sign in",
   "sign.in.btn.pending.state": "Loading",
   "need.help.signing.in.collapsible.menu": "Need help signing in?",
@@ -116,11 +116,11 @@
   "register.page.terms.of.service.and.honor.code": "By creating an account, you agree to the {tosAndHonorCode} and you acknowledge that {platformName} and each\n                Member process your personal data in accordance with the {privacyPolicy}.",
   "register.page.honor.code": "I agree to the {platformName} {tosAndHonorCode}",
   "register.page.title": "Register | {siteName}",
-  "registration.fullname.label": "Full name",
+  "registration.fullname.label": "ФИО",
   "registration.email.label": "Email",
-  "registration.username.label": "Public username",
-  "registration.password.label": "Password",
-  "registration.country.label": "Country/Region",
+  "registration.username.label": "Имя пользователя",
+  "registration.password.label": "Пароль",
+  "registration.country.label": "Страна/Регион",
   "registration.opt.in.label": "I agree that {siteName} may send me marketing messages.",
   "help.text.name": "This name will be used by any certificates that you earn.",
   "help.text.username.1": "The name that will identify you in your courses.",
@@ -131,13 +131,13 @@
   "registration.other.options.heading": "Or register with:",
   "register.institution.login.button": "Institution/campus credentials",
   "register.institution.login.page.title": "Register with institution/campus credentials",
-  "empty.name.field.error": "Enter your full name",
-  "empty.email.field.error": "Enter your email",
+  "empty.name.field.error": "Введите свои ФИО",
+  "empty.email.field.error": "Введите адрес электронной почты",
   "email.do.not.match": "The email addresses do not match.",
-  "empty.username.field.error": "Username must be between 2 and 30 characters",
-  "empty.password.field.error": "Password criteria has not been met",
-  "empty.country.field.error": "Select your country or region of residence",
-  "email.invalid.format.error": "Enter a valid email address",
+  "empty.username.field.error": "Имя пользователя должно содержать от 2 до 30 символов",
+  "empty.password.field.error": "Пароль не удовлетворяет критериям",
+  "empty.country.field.error": "Выберите свою страну или регион проживания",
+  "email.invalid.format.error": "Введите действительный адрес электронной почты",
   "email.ratelimit.less.chars.validation.message": "Email must have 3 characters.",
   "username.validation.message": "Username must be between 2 and 30 characters",
   "name.validation.message": "Enter a valid name",
@@ -155,9 +155,9 @@
   "registration.year.of.birth.label": "Year of birth (optional)",
   "registration.field.gender.options.label": "Gender (optional)",
   "registration.goals.label": "Tell us why you're interested in edX (optional)",
-  "registration.field.gender.options.f": "Female",
-  "registration.field.gender.options.m": "Male",
-  "registration.field.gender.options.o": "Other/Prefer not to say",
+  "registration.field.gender.options.f": "Женщина",
+  "registration.field.gender.options.m": "Мужчина",
+  "registration.field.gender.options.o": "Другое/Предпочитаю не говорить",
   "registration.field.education.levels.label": "Highest level of education completed (optional)",
   "registration.field.education.levels.p": "Doctorate",
   "registration.field.education.levels.m": "Master's or professional degree",
@@ -176,27 +176,27 @@
   "reset.password.page.title": "Reset Password | {siteName}",
   "reset.password": "Reset password",
   "reset.password.page.instructions": "Enter and confirm your new password.",
-  "new.password.label": "New password",
-  "confirm.password.label": "Confirm password",
-  "passwords.do.not.match": "Passwords do not match",
-  "confirm.your.password": "Confirm your password",
-  "forgot.password.confirmation.sign.in.link": "sign in",
+  "new.password.label": "Новый пароль",
+  "confirm.password.label": "Подтверждение пароля",
+  "passwords.do.not.match": "Пароли не совпадают",
+  "confirm.your.password": "Подтвердите свой пароль",
+  "forgot.password.confirmation.sign.in.link": "войти в систему",
   "reset.password.request.forgot.password.text": "Forgot password",
   "reset.password.request.invalid.token.header": "Invalid password reset link",
-  "reset.password.empty.new.password.field.error": "Please enter your new password.",
+  "reset.password.empty.new.password.field.error": "Пожалуйста, введите свой новый пароль.",
   "reset.password.failure.heading": "We couldn't reset your password.",
-  "reset.password.form.submission.error": "Please check your responses and try again.",
-  "reset.password.request.server.error": "Failed to reset password",
-  "reset.password.token.validation.sever.error": "Token validation failure",
-  "reset.server.rate.limit.error": "Too many requests.",
-  "reset.password.success.heading": "Password reset complete.",
-  "reset.password.success": "Your password has been reset. Sign in to your account.",
+  "reset.password.form.submission.error": "Пожалуйста, проверьте свои ответы и попробуйте еще раз.",
+  "reset.password.request.server.error": "Не удалось сбросить пароль",
+  "reset.password.token.validation.sever.error": "Сбой проверки токена",
+  "reset.server.rate.limit.error": "Слишком много запросов.",
+  "reset.password.success.heading": "Сброс пароля завершен.",
+  "reset.password.success": "Ваш пароль был сброшен. Войдите в свою учетную запись.",
   "progressive.profiling.page.title": "Optional Fields | {siteName}",
   "progressive.profiling.page.heading": "A few questions for you will help us get smarter.",
-  "gender.options.label": "Gender (optional)",
-  "gender.options.f": "Female",
-  "gender.options.m": "Male",
-  "gender.options.o": "Other/Prefer not to say",
+  "gender.options.label": "Пол (необязательно)",
+  "gender.options.f": "Женщина",
+  "gender.options.m": "Мужчина",
+  "gender.options.o": "Другое/Предпочитаю не говорить",
   "education.levels.label": "Highest level of education completed (optional)",
   "education.levels.p": "Doctorate",
   "education.levels.m": "Master's or professional degree",
@@ -205,15 +205,15 @@
   "education.levels.hs": "Secondary/high school",
   "education.levels.jhs": "Junior secondary/junior high/middle school",
   "education.levels.el": "Elementary/primary school",
-  "education.levels.none": "No formal education",
-  "education.levels.other": "Other education",
-  "year.of.birth.label": "Year of birth (optional)",
-  "optional.fields.information.link": "Learn more about how we use this information.",
-  "optional.fields.submit.button": "Submit",
-  "optional.fields.skip.button": "Skip for now",
-  "continue.to.platform": "Continue to {platformName}",
-  "modal.title": "Thanks for letting us know.",
-  "modal.description": "You can complete your profile in settings at any time if you change your mind.",
-  "welcome.page.error.heading": "We couldn't update your profile",
-  "welcome.page.error.message": "An error occurred. You can complete your profile in settings at any time."
+  "education.levels.none": "Никакого формального образования",
+  "education.levels.other": "Другое образование",
+  "year.of.birth.label": "Год рождения (необязательно)",
+  "optional.fields.information.link": "Узнайте больше о том, как мы используем эту информацию.",
+  "optional.fields.submit.button": "Применить",
+  "optional.fields.skip.button": "Пропустить сейчас",
+  "continue.to.platform": "Перейти на {platformName}",
+  "modal.title": "Спасибо, что дали нам знать.",
+  "modal.description": "Вы можете заполнить свой профиль в настройках в любое время, если передумаете.",
+  "welcome.page.error.heading": "Мы не смогли обновить ваш профиль",
+  "welcome.page.error.message": "Произошла ошибка. Вы можете заполнить свой профиль в настройках в любое время."
 }
