--- a/src/i18n/messages/ru.json
+++ b/src/i18n/messages/ru.json
@@ -16,7 +16,7 @@
   "enterprisetpa.sso.button.title": "Войдите в систему, используя {providerName}",
   "enterprisetpa.login.button.text": "Другие способы входа в систему или регистрации",
   "sso.sign.in.with": "Войдите в систему с помощью {providerName}",
-  "sso.create.account.using": "Создайте учетную запись с помощью{providerName}",
+  "sso.create.account.using": "Создайте учетную запись с помощью {providerName}",
   "show.password": "Показать пароль",
   "hide.password": "Скрыть пароль",
   "one.letter": "1 буква",
@@ -122,11 +122,11 @@
   "registration.password.label": "Пароль",
   "registration.country.label": "Страна/Регион",
   "registration.opt.in.label": "I agree that {siteName} may send me marketing messages.",
-  "help.text.name": "This name will be used by any certificates that you earn.",
-  "help.text.username.1": "The name that will identify you in your courses.",
-  "help.text.username.2": "This can not be changed later.",
-  "help.text.email": "For account activation and important updates",
-  "create.account.for.free.button": "Create an account for free",
+  "help.text.name": "Имя, которое будет прописано на получаемых сертификатах.",
+  "help.text.username.1": "Уникальное имя пользователя.",
+  "help.text.username.2": "Нельзя будет изменить потом.",
+  "help.text.email": "Для восстановления аккаунта и получения важных новостей",
+  "create.account.for.free.button": "Зарегистрироваться",
   "create.an.account.btn.pending.state": "Loading",
   "registration.other.options.heading": "Or register with:",
   "register.institution.login.button": "Institution/campus credentials",
@@ -181,7 +181,7 @@
   "passwords.do.not.match": "Пароли не совпадают",
   "confirm.your.password": "Подтвердите свой пароль",
   "forgot.password.confirmation.sign.in.link": "войти в систему",
-  "reset.password.request.forgot.password.text": "Forgot password",
+  "reset.password.request.forgot.password.text": "Забыли пароль?",
   "reset.password.request.invalid.token.header": "Invalid password reset link",
   "reset.password.empty.new.password.field.error": "Пожалуйста, введите свой новый пароль.",
   "reset.password.failure.heading": "We couldn't reset your password.",
