--- a/src/i18n/messages/ru.json
+++ b/src/i18n/messages/ru.json
@@ -30,21 +30,21 @@
   "forgot.password.confirmation.message": "We sent an email to {email} with instructions to reset your password.\n          If you do not receive a password reset message after 1 minute, verify that you entered\n          the correct email address, or check your spam folder. If you need further assistance, {supportLink}.",
   "forgot.password.page.title": "Forgot Password | {siteName}",
   "forgot.password.page.heading": "Reset password",
-  "forgot.password.page.instructions": "Please enter your email address below and we will send you an email with instructions on how to reset your password.",
+  "forgot.password.page.instructions": "Пожалуйста, введите свой адрес электронной почты ниже, и мы вышлем вам электронное письмо с инструкциями по сбросу пароля.",
   "forgot.password.page.invalid.email.message": "Enter a valid email address",
   "forgot.password.page.email.field.label": "Email",
-  "forgot.password.page.submit.button": "Submit",
+  "forgot.password.page.submit.button": "Отправить",
   "forgot.password.error.alert.title.": "We were unable to contact you.",
   "forgot.password.error.message.title": "An error occurred.",
   "forgot.password.request.in.progress.message": "Your previous request is in progress, please try again in a few moments.",
-  "forgot.password.empty.email.field.error": "Enter your email",
+  "forgot.password.empty.email.field.error": "Введите адрес электронной почты",
   "forgot.password.invalid.email.message": "The email address you've provided isn't formatted correctly.",
-  "forgot.password.email.help.text": "The email address you used to register with {platformName}",
-  "confirmation.message.title": "Check your email",
-  "confirmation.support.link": "contact technical support",
+  "forgot.password.email.help.text": "Адрес электронной почты, который использовался при регистрации на платформе",
+  "confirmation.message.title": "Проверьте электронную почту",
+  "confirmation.support.link": "свяжитесь с технической поддержкой",
   "need.help.sign.in.text": "Need help signing in?",
-  "additional.help.text": "For additional help, contact {platformName} support at ",
-  "sign.in.text": "Sign in",
+  "additional.help.text": "За дополнительной помощью обращайтесь по адресу cdot@ssau.ru",
+  "sign.in.text": "Войти в систему",
   "extend.field.errors": "{emailError} below.",
   "invalid.token.heading": "Invalid password reset link",
   "invalid.token.error.message": "This password reset link is invalid. It may have been used already. Enter your email below to receive a new link.",
