--- a/src/i18n/messages/ru.json
+++ b/src/i18n/messages/ru.json
@@ -29,7 +29,7 @@
   "error.notfound.message": "The page you're looking for is unavailable or there's an error in the URL. Please check the URL and try again.",
   "forgot.password.confirmation.message": "We sent an email to {email} with instructions to reset your password.\n          If you do not receive a password reset message after 1 minute, verify that you entered\n          the correct email address, or check your spam folder. If you need further assistance, {supportLink}.",
   "forgot.password.page.title": "Forgot Password | {siteName}",
-  "forgot.password.page.heading": "Reset password",
+  "forgot.password.page.heading": "Сброс пароля",
   "forgot.password.page.instructions": "Пожалуйста, введите свой адрес электронной почты ниже, и мы вышлем вам электронное письмо с инструкциями по сбросу пароля.",
   "forgot.password.page.invalid.email.message": "Enter a valid email address",
   "forgot.password.page.email.field.label": "Email",
@@ -64,11 +64,11 @@
   "login.page.title": "Login | {siteName}",
   "login.user.identity.label": "Имя пользователя или email",
   "login.password.label": "Пароль",
-  "sign.in.button": "Sign in",
+  "sign.in.button": "Войти",
   "sign.in.btn.pending.state": "Loading",
   "need.help.signing.in.collapsible.menu": "Need help signing in?",
   "forgot.password.link": "Forgot my password",
-  "forgot.password": "Forgot password",
+  "forgot.password": "Забыли пароль?",
   "other.sign.in.issues": "Other sign in issues",
   "need.other.help.signing.in.collapsible.menu": "Need other help signing in?",
   "institution.login.button": "Institution/campus credentials",
@@ -87,7 +87,7 @@
   "email.validation.message": "Enter your username or email",
   "password.validation.message": "Password criteria has not been met",
   "register.link": "Create an account",
-  "sign.in.heading": "Sign in",
+  "sign.in.heading": "Войти",
   "account.activation.success.message.title": "Success! You have activated your account.",
   "account.activation.success.message": "You will now receive email updates and alerts from us related to the courses you are enrolled in. Sign in to continue.",
   "account.activation.info.message": "This account has already been activated.",
@@ -95,9 +95,9 @@
   "account.activation.support.link": "contact support",
   "tpa.account.link": "{provider} account",
   "account.confirmation.success.message.title": "Success! You have confirmed your email.",
-  "account.confirmation.success.message": "Sign in to continue.",
-  "account.confirmation.info.message": "This email has already been confirmed.",
-  "account.confirmation.error.message.title": "Your email could not be confirmed",
+  "account.confirmation.success.message": "Войдите в систему, чтобы продолжить.",
+  "account.confirmation.info.message": "Эта электронная почта уже была подтверждена.",
+  "account.confirmation.error.message.title": "Ваш адрес электронной почты не может быть подтвержден",
   "login.rate.limit.reached.message": "Too many failed login attempts. Try again later.",
   "login.failure.header.title": "We couldn't sign you in.",
   "contact.support.link": "contact {platformName} support",
