--- a/src/i18n/messages/ru.json
+++ b/src/i18n/messages/ru.json
@@ -31,29 +31,29 @@
   "forgot.password.page.title": "Forgot Password | {siteName}",
   "forgot.password.page.heading": "Сброс пароля",
   "forgot.password.page.instructions": "Пожалуйста, введите свой адрес электронной почты ниже, и мы вышлем вам электронное письмо с инструкциями по сбросу пароля.",
-  "forgot.password.page.invalid.email.message": "Enter a valid email address",
+  "forgot.password.page.invalid.email.message": "Введите действительный адрес электронной почты",
   "forgot.password.page.email.field.label": "Email",
   "forgot.password.page.submit.button": "Отправить",
-  "forgot.password.error.alert.title.": "We were unable to contact you.",
-  "forgot.password.error.message.title": "An error occurred.",
-  "forgot.password.request.in.progress.message": "Your previous request is in progress, please try again in a few moments.",
+  "forgot.password.error.alert.title.": "Мы не смогли доставить сообщение",
+  "forgot.password.error.message.title": "Произошла ошибка.",
+  "forgot.password.request.in.progress.message": "Ваш предыдущий запрос выполняется, пожалуйста, повторите попытку через несколько минут.",
   "forgot.password.empty.email.field.error": "Введите адрес электронной почты",
-  "forgot.password.invalid.email.message": "The email address you've provided isn't formatted correctly.",
+  "forgot.password.invalid.email.message": "Неверный формат указанной электронной почты",
   "forgot.password.email.help.text": "Адрес электронной почты, который использовался при регистрации на платформе",
   "confirmation.message.title": "Проверьте электронную почту",
   "confirmation.support.link": "свяжитесь с технической поддержкой",
-  "need.help.sign.in.text": "Need help signing in?",
+  "need.help.sign.in.text": "Нужна помощь при входе в систему?",
   "additional.help.text": "За дополнительной помощью обращайтесь по адресу cdot@ssau.ru",
   "sign.in.text": "Войти в систему",
-  "extend.field.errors": "{emailError} below.",
+  "extend.field.errors": "{emailError} ниже.",
   "invalid.token.heading": "Invalid password reset link",
-  "invalid.token.error.message": "This password reset link is invalid. It may have been used already. Enter your email below to receive a new link.",
-  "token.validation.rate.limit.error.heading": "Too many requests",
-  "token.validation.rate.limit.error": "An error has occurred because of too many requests. Please try again after some time.",
-  "token.validation.internal.sever.error.heading": "Token validation failure",
-  "token.validation.internal.sever.error": "An error has occurred. Try refreshing the page, or check your internet connection.",
-  "internal.server.error": "An error has occurred. Try refreshing the page, or check your internet connection.",
-  "rate.limit.error": "An error has occurred because of too many requests. Please try again after some time.",
+  "invalid.token.error.message": "Эта ссылка для сброса пароля недействительна. Возможно, она была использована ранее. Введите адрес своей электронной почты, чтобы получить новую ссылку.",
+  "token.validation.rate.limit.error.heading": "Слишком много запросов",
+  "token.validation.rate.limit.error": "Произошла ошибка из-за слишком большого количества запросов. Пожалуйста, попробуйте еще раз через некоторое время.",
+  "token.validation.internal.sever.error.heading": "Сбой проверки токена",
+  "token.validation.internal.sever.error": "Произошла ошибка. Попробуйте обновить страницу или проверьте свое подключение к Интернету.",
+  "internal.server.error": "Произошла ошибка. Попробуйте обновить страницу или проверьте свое подключение к Интернету.",
+  "rate.limit.error": "Произошла ошибка из-за слишком большого количества запросов. Пожалуйста, попробуйте еще раз через некоторое время.",
   "account.activation.error.message": "Something went wrong, please {supportLink} to resolve this issue.",
   "login.inactive.user.error": "In order to sign in, you need to activate your account.{lineBreak}\n            {lineBreak}We just sent an activation link to {email}. If you do not receive an email,\n            check your spam folders or {supportLink}.",
   "allowed.domain.login.error": "As {allowedDomain} user, You must login with your {allowedDomain} {tpaLink}.",
@@ -67,15 +67,15 @@
   "sign.in.button": "Войти",
   "sign.in.btn.pending.state": "Loading",
   "need.help.signing.in.collapsible.menu": "Need help signing in?",
-  "forgot.password.link": "Forgot my password",
+  "forgot.password.link": "Забыли пароль?",
   "forgot.password": "Забыли пароль?",
-  "other.sign.in.issues": "Other sign in issues",
+  "other.sign.in.issues": "Другие проблемы со входом",
   "need.other.help.signing.in.collapsible.menu": "Need other help signing in?",
   "institution.login.button": "Institution/campus credentials",
   "institution.login.page.title": "Sign in with institution/campus credentials",
   "institution.login.page.back.button": "Back to sign in",
-  "create.an.account": "Create an account",
-  "login.other.options.heading": "Or sign in with:",
+  "create.an.account": "Создать учетную запись",
+  "login.other.options.heading": "Или войдите в систему с помощью:",
   "non.compliant.password.title": "We recently changed our password requirements",
   "non.compliant.password.message": "Your current password does not meet the new security requirements. We just sent a password-reset message to the email address associated with this account. Thank you for helping us keep your data safe.",
   "account.locked.out.message.1": "To protect your account, it's been temporarily locked. Try again in 30 minutes.",
