--- a/src/i18n/messages/ru.json
+++ b/src/i18n/messages/ru.json
@@ -128,7 +128,7 @@
   "help.text.email": "Для восстановления аккаунта и получения важных новостей",
   "create.account.for.free.button": "Зарегистрироваться",
   "create.an.account.btn.pending.state": "Loading",
-  "registration.other.options.heading": "Or register with:",
+  "registration.other.options.heading": "Или зарегистрироваться через:",
   "register.institution.login.button": "Institution/campus credentials",
   "register.institution.login.page.title": "Register with institution/campus credentials",
   "empty.name.field.error": "Введите свои ФИО",
