--- a/src/i18n/messages/ru.json
+++ b/src/i18n/messages/ru.json
@@ -99,9 +99,9 @@
   "account.confirmation.info.message": "Эта электронная почта уже была подтверждена.",
   "account.confirmation.error.message.title": "Ваш адрес электронной почты не может быть подтвержден",
   "login.rate.limit.reached.message": "Too many failed login attempts. Try again later.",
-  "login.failure.header.title": "We couldn't sign you in.",
+  "login.failure.header.title": "Ошибка авторизации.",
   "contact.support.link": "contact {platformName} support",
-  "login.incorrect.credentials.error": "The username, email, or password you entered is incorrect. Please try again.",
+  "login.incorrect.credentials.error": "Введены неправильные имя пользователя(email) или пароль. Попробуйте еще раз.",
   "login.failed.attempt.error": "You have {remainingAttempts} more sign in attempts before your account is temporarily locked.",
   "login.locked.out.error.message": "To protect your account, it’s been temporarily locked. Try again in {lockedOutPeriod} minutes.",
   "login.form.invalid.error.message": "Please fill in the fields below.",
@@ -111,7 +111,7 @@
   "password.security.block.title": "Password change required",
   "password.security.nudge.body": "Our system detected that your password is vulnerable. We recommend you change it so that your account stays secure.",
   "password.security.block.body": "Our system detected that your password is vulnerable. Change your password so that your account stays secure.",
-  "password.security.close.button": "Close",
+  "password.security.close.button": "Закрыть",
   "password.security.redirect.to.reset.password.button": "Reset your password",
   "register.page.terms.of.service.and.honor.code": "By creating an account, you agree to the {tosAndHonorCode} and you acknowledge that {platformName} and each\n                Member process your personal data in accordance with the {privacyPolicy}.",
   "register.page.honor.code": "I agree to the {platformName} {tosAndHonorCode}",
